--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,46 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇻🇬_VG_英属维尔京群岛
+    type: vmess
+    server: 45.88.3.133
+    port: 33676
+    cipher: auto
+    uuid: 4a0190f6-06d0-49d6-bac8-51bf4e4f2db5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id002
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国
+    type: vmess
+    server: 41.kccic2pa.xyz
+    port: 50041
+    cipher: auto
+    uuid: 5c3d60c1-ec2b-41f4-bd22-b7336d7e37bb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: vps.pangchun.top
+    port: 443
+    cipher: auto
+    uuid: 99a7f227-b79d-4d46-8e6b-e3edd78f56e6
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cfvmess
+      headers:
+        host: vps.pangchun.top
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: wnd2.shabijichang.com
     port: 80
@@ -20,98 +59,8 @@ proxies:
       path: /
       headers:
         host: wnd2.shabijichang.com
-  - &id002
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: hdlb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb3.shabijichang.com
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 172.67.184.13
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 156.225.67.104
-    port: 30000
-    cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696944806961
-      headers:
-        host: www.41758112.xyz
   - &id005
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_1
-    type: vmess
-    server: 162.159.140.6
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id006
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
-  - &id007
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.17.27.2
-    port: 80
-    cipher: auto
-    uuid: 72d46152-ee0b-4610-efb1-ffb0f786b848
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my2.gamedaylion.buzz
-  - &id008
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: asb2.shabijichang.com
     port: 80
@@ -125,10 +74,71 @@ proxies:
       path: /
       headers:
         host: asb2.shabijichang.com
-  - &id009
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+  - &id006
+    name: 🇮🇱_IL_以色列
     type: vmess
-    server: mm3.shabijichang.com
+    server: 83.229.70.215
+    port: 13337
+    cipher: auto
+    uuid: bdd22841-c4d2-4aa8-acf2-95aa9125f159
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ta-2.trollfunny.net
+    network: ws
+    ws-opts:
+      path: /
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 8080
+    cipher: auto
+    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v005.ssrsub.com
+  - &id008
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.21.93.238
+    port: 443
+    cipher: auto
+    uuid: 64203121-39f5-4f05-b842-a7697ef379a1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: s3kdvdmfmk.folow-r18.cfd
+    network: ws
+    ws-opts:
+      path: /okeyvws
+      headers:
+        host: s3.folow-r18.cfd
+  - &id009
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 198.41.217.5
+    port: 2087
+    cipher: auto
+    uuid: 9c7de3e8-c2aa-4fe0-b689-9b26d21e9786
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: docs2.obneh247.ir
+    network: ws
+    ws-opts:
+      path: /2v2rayTEAM
+      headers:
+        host: docs2.obneh247.ir
+  - &id010
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -139,38 +149,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
-  - &id010
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 104.20.231.210
-    port: 80
-    cipher: auto
-    uuid: 72d46152-ee0b-4610-efb1-ffb0f786b848
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: my.designlion.buzz
+        host: mm2.shabijichang.com
   - &id011
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
-    type: vmess
-    server: cf.yx.alue.link
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.wx.alue.link
-  - &id012
     name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: yd1.992688.xyz
@@ -185,103 +165,7 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
-  - &id013
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
-    type: vmess
-    server: 104.21.75.246
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id014
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id015
-    name: 🇫🇮_FI_芬兰_1
-    type: trojan
-    server: fi1.connecton.surf
-    port: 443
-    udp: true
-    password: 44c5578a7c
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇫🇮_FI_芬兰_2
-    type: trojan
-    server: 37.143.129.56
-    port: 443
-    udp: true
-    password: 44c5578a7c
-    sni: fi1.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 35.178.148.93
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 74.121.191.98
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 45.199.138.186
-    port: 30000
-    cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1697376782879
-      headers:
-        host: www.19229362.xyz
-  - &id020
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
-    type: vmess
-    server: sbl4.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl4.shabijichang.com
-  - &id021
+  - &id012
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
     server: jd3.shabijichang.com
@@ -296,20 +180,13 @@ proxies:
       path: /
       headers:
         host: jd3.shabijichang.com
-  - &id022
-    name: 🇷🇴_RO_罗马尼亚
-    type: ss
-    server: 194.14.217.115
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id023
-    name: 🇺🇸_US_美国_10
+  - &id013
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 64.64.233.44
+    server: sbl3.shabijichang.com
     port: 80
     cipher: auto
-    uuid: 9d361e68-5969-4af7-cfe5-50eeea8c3d1b
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -317,11 +194,120 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: tms.dingtalk.com
-  - &id024
+        host: sbl3.shabijichang.com
+  - &id014
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
+    type: vmess
+    server: 162.159.137.9
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us.wx.alue.link
+  - &id015
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 154.85.1.244
+    port: 30000
+    cipher: auto
+    uuid: 1d474f0b-e78d-4af9-bc4a-a467467bc7a7
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696944806961
+      headers:
+        host: www.28115361.xyz
+  - &id016
+    name: 🇺🇸_US_美国->🇦🇪_AE_阿联酋
+    type: vmess
+    server: db5.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: db5.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 89.187.179.192
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 124.220.57.75
+    port: 80
+    cipher: auto
+    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id019
     name: 🇮🇪_IE_爱尔兰_1
     type: trojan
-    server: 54.75.224.131
+    server: 18.203.118.190
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 18.170.169.20
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.158.195.96
+    port: 110
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇫🇷_FR_法国_2
+    type: trojan
+    server: 35.181.192.228
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 198.244.231.25
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id024
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 52.215.119.194
     port: 22222
     udp: true
     password: telegram-id-directvpn
@@ -329,19 +315,19 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id025
-    name: 🇮🇪_IE_爱尔兰_2
+    name: 🇸🇪_SE_瑞典
     type: trojan
-    server: 52.19.106.14
+    server: 13.49.217.34
     port: 22222
     udp: true
-    password: telegram-id-directvpn
+    password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
   - &id026
-    name: 🇬🇧_GB_英国_2
+    name: 🇬🇧_GB_英国_3
     type: trojan
-    server: 13.43.232.136
+    server: 18.130.126.39
     port: 22222
     udp: true
     password: telegram-id-directvpn
@@ -349,94 +335,82 @@ proxies:
     skip-cert-verify: true
     network: tcp
   - &id027
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 15.236.82.40
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
-    server: 128.140.109.240
-    port: 11431
+    server: 45.199.138.191
+    port: 30000
     cipher: auto
-    uuid: a6bdd897-0cd7-4622-91ce-8d421e966b00
-    alterId: 0
-    tls: false
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1696251522438
       headers:
-        host: host.mtn.jd-vpn.shop
-  - &id029
-    name: 🇮🇪_IE_爱尔兰_3
+        host: www.42077230.xyz
+  - &id028
+    name: 🇫🇷_FR_法国_3
     type: trojan
-    server: 63.33.95.210
+    server: 52.47.48.116
     port: 22222
     udp: true
     password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
   - &id030
-    name: 🇳🇱_NL_荷兰
-    type: ss
-    server: 51.15.27.48
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
+    name: 🇬🇧_GB_英国_4
+    type: trojan
+    server: 13.43.211.10
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
   - &id031
-    name: 🇰🇷_KR_韩国->🇬🇧_GB_英国
-    type: vmess
-    server: 130.162.154.209
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
+    name: 🇫🇷_FR_法国_4
+    type: trojan
+    server: 35.181.201.129
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ophelia.mom:443/linkvws
-      headers:
-        host: cf.tonyluk.link
+    network: tcp
   - &id032
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_2
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
     type: vmess
-    server: 104.16.68.38
-    port: 2052
+    server: 104.18.202.232
+    port: 80
     cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    uuid: 6bf1b342-2bf0-4608-b288-8ee515e2d594
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /@hopev2ray،@hopev2ray
       headers:
-        host: lu.wx.alue.link
+        host: de1vm.cdn-03.live
   - &id033
-    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_3
-    type: vmess
-    server: 162.159.152.6
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lu.wx.alue.link
-  - &id034
-    name: 🇺🇸_US_美国_11
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_1
     type: vmess
     server: 162.159.128.91
     port: 2052
@@ -450,6 +424,51 @@ proxies:
       path: /
       headers:
         host: lu.wx.alue.link
+  - &id034
+    name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡_2
+    type: vmess
+    server: 162.159.152.6
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lu.wx.alue.link
+  - &id035
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
+    type: vmess
+    server: 162.159.143.241
+    port: 2052
+    cipher: auto
+    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us.wx.alue.link
+  - &id036
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 156.225.67.104
+    port: 30000
+    cipher: auto
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696944806961
+      headers:
+        host: www.41758112.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -510,6 +529,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -549,6 +570,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -586,6 +609,8 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
